# drafter

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .npmignore  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CTestConfig.cmake  DefaultBuildType.cmake  Dockerfile  Gemfile  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.txt  appveyor.yml  circle.yml  circle_emsdk.sh  common.gypi  configure  drafter.gyp  emsdk.patch  integration.cmake  integration.patch  package.json  vcbuild.bat
drafter/: CMakeLists.txt  drafter-config.cmake  drafter-tests.cmake
drafter.js/: CMakeLists.txt
drafter.js/src/: cparse.cc  cparse.h  post.js  pre.js
drafter/src/: ConversionContext.h  ElementData.h  ElementInfoUtils.h  NamedTypesRegistry.cc  NamedTypesRegistry.h  NodeInfo.h  RefractAPI.cc  RefractDataStructure.cc  RefractDataStructure.h  RefractSourceMap.cc  RefractSourceMap.h  Render.cc  Render.h  Serialize.h  SerializeResult.cc  Version.h  config.cc  drafter.cc  drafter.h  main.cc
drafter/test/: Tracker.h  draftertest.h  test-ApplyVisitorTest.cc  test-CircularReferenceTest.cc  test-ElementComparator.cc  test-ElementFactoryTest.cc  test-ElementInfoUtils.cc  test-RefractDataStructureTest.cc  test-SyntaxIssuesTest.cc
ext/boost-assert/: .travis.yml  BoostAssertConfig.cmake  CMakeLists.txt  appveyor.yml
ext/boost-config/: BoostConfigConfig.cmake  CMakeLists.txt
ext/boost-container/: BoostContainerConfig.cmake  CMakeLists.txt  boost-container-tests.cmake
ext/boost-core/: BoostCoreConfig.cmake  CMakeLists.txt
ext/boost-detail/: .travis.yml  BoostDetailConfig.cmake  CMakeLists.txt
ext/boost-functional/: BoostFunctionalConfig.cmake  CMakeLists.txt
ext/boost-integer/: .travis.yml  BoostIntegerConfig.cmake  CMakeLists.txt  appveyor.yml
ext/boost-intrusive/: BoostIntrusiveConfig.cmake  CMakeLists.txt
ext/boost-move/: BoostMoveConfig.cmake  CMakeLists.txt
ext/boost-mpl/: BoostMplConfig.cmake  CMakeLists.txt
ext/boost-predef/: .travis.yml  BoostPredefConfig.cmake  CMakeLists.txt
ext/boost-preprocessor/: BoostPreprocessorConfig.cmake  CMakeLists.txt
ext/boost-smart_ptr/: .travis.yml  BoostSmartPtrConfig.cmake  CMakeLists.txt  appveyor.yml
ext/boost-static_assert/: BoostStaticAssertConfig.cmake  CMakeLists.txt
ext/boost-throw_exception/: BoostThrowExceptionConfig.cmake  CMakeLists.txt
ext/boost-tuple/: BoostTupleConfig.cmake  CMakeLists.txt
ext/boost-type_traits/: .travis.yml  BoostTypeTraitsConfig.cmake  CMakeLists.txt
ext/boost-typeof/: BoostTypeofConfig.cmake  CMakeLists.txt
ext/boost-utility/: BoostUtilityConfig.cmake  CMakeLists.txt
ext/boost_1_66_0/: BoostContainerConfig.cmake  CMakeLists.txt
ext/snowcrash/: CMakeLists.txt  Makefile  README.md  snowcrash-tests.cmake  snowcrash.gyp
logger/: CMakeLists.txt  LoggerConfig.cmake
logger/src/: Trivial.cc
markdown-parser/: CMakeLists.txt  markdown-parser-config.cmake
markdown-parser/src/: MarkdownNode.h  MarkdownParser.h
snowcrash/: CMakeLists.txt
snowcrash/src/: AttributesParser.h  Blueprint.h  BlueprintUtility.h  MSONMixinParser.h  MSONParameterParser.h  MSONPropertyMemberParser.h  MSONSourcemap.h  MSONTypeSectionParser.h  MSONValueMemberParser.cc  MSONValueMemberParser.h  ParameterParser.h  ResourceGroupParser.h  Section.h  Signature.h  UriTemplateParser.h
snowcrash/test/: snowcrashtest.h  test-ParametersParser.cc  test-RegexMatch.cc  test-ResourceParser.cc  test-UriTemplateParser.cc
src/: API.cc  Allocator.h  CMakeLists.txt  ContentTypeMatcher.cc  ContentTypeMatcher.h  ConversionContext.cc  ConversionContext.h  ElementComparator.h  ElementData.h  ElementInfoUtils.h  Error.h  MsonMemberToApie.cc  MsonMemberToApie.h  MsonOneOfSectionToApie.cc  MsonOneOfSectionToApie.h  MsonTypeSectionToApie.cc  MsonTypeSectionToApie.h  NamedTypesRegistry.cc  NamedTypesRegistry.h  NodeInfo.h  RefractAPI.cc  RefractAPI.h  RefractAST.cc  RefractAST.h  RefractDataStructure.cc  RefractDataStructure.h  RefractElementFactory.cc  RefractElementFactory.h  RefractParseResult.cc  RefractParseResult.h  RefractSourceMap.cc  RefractSourceMap.h  Render.cc  Render.h  RenderJSONVisitor.cc  RenderJSONVisitor.h  Serialize.cc  Serialize.h  SerializeAST.cc  SerializeAST.h  (+26 more)
src/apib2apie/: CollectionToApie.cc  CollectionToApie.h  CopyToApie.cc  CopyToApie.h  LiteralToApie.cc  LiteralToApie.h  ParametersToApie.cc  ParametersToApie.h  PayloadToApie.cc  PayloadToApie.h  PrimitiveToApie.cc  PrimitiveToApie.h  SourceMapToApie.cc  SourceMapToApie.h
src/backend/: MediaTypeS11n.cc  MediaTypeS11n.h  Mediatype.cc  MediatypeS11n.cc  MediatypeS11n.h
src/format/: Format.h  MediatypeFmt.cc  MediatypeFmt.h
src/parser/: Mediatype.cc  Mediatype.h  Uritemplate.h  recover.h
src/refract/: AppendDecorator.h  ApplyVisitor.cc  ApplyVisitor.h  Asset.cc  Asset.h  Build.h  ComparableVisitor.cc  ComparableVisitor.h  Element.cc  Element.h  ElementFwd.h  ElementIfc.h  ElementInserter.h  ElementSize.cc  ElementUtils.cc  ElementUtils.h  Exception.h  ExpandVisitor.cc  ExpandVisitor.h  FilterVisitor.h  InfoElements.cc  InfoElements.h  InfoElementsUtils.h  IsExpandableVisitor.cc  IsExpandableVisitor.h  Iterate.h  JSONSchemaVisitor.cc  JSONSchemaVisitor.h  JsonSchema.cc  JsonSchema.h  (+30 more)
test/: CMakeLists.txt  Tracker.h  ctesting.c  ctesting.h  draftertest.cc  draftertest.h  test-ApplyVisitorTest.cc  test-Boutique.cc  test-CAPI.c  test-CircularReferenceTest.cc  test-CommonDataTest.cc  test-ContentTypeMatcher.cc  test-ElementComparator.cc  test-ElementDataTest.cc  test-ElementFactoryTest.cc  test-ElementInfoUtils.cc  test-ExtendElementTest.cc  test-OneOfTest.cc  test-RefractAPITest.cc  test-RefractDataStructureTest.cc  test-RefractParseResultTest.cc  test-RefractSourceMapTest.cc  test-RefractTest.cc  test-RenderFormURLEncodedTest.cc  test-RenderTest.cc  test-SchemaTest.cc  test-Serialize.cc  test-SerializeResult.cc  test-SerializeResultTest.cc  test-SerializeSourceAnnotations.cc  test-SerializeSourceMapTest.cc  test-SyntaxIssuesTest.cc  test-VisitorUtils.cc  test-cdrafter.cc  test-drafter.h  test-main.cc  test-sourceMapToLineColumn.cc
(+1337 files in other folders)
